--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=a08387ef1546ca5b34af",
+    "/css/app.css": "/css/app.css?id=a63e9535b371f4f1efd8"
 }
