--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=28f21c76d59c9532eff6",
-    "/css/app.css": "/css/app.css?id=a63e9535b371f4f1efd8"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css"
 }
