map, regist mobile adaptive

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=71c860b145aa2aa0263a",
+    "/css/app.css": "/css/app.css?id=20a81e0e157347f8274f"
 }
