Права доступа, роли, настройки

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=edb237a905c6f7cee33d",
+    "/css/app.css": "/css/app.css?id=30a5d42cc47707fbb594"
 }
