--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "vue-tippy": "^6.0.0-alpha.37",
         "vue-toast-notification": "2.0",
         "vue3-popper": "^1.3.0",
+        "vue3-treeselect": "^0.1.10",
         "vuex": "^4.0.2"
     }
 }
