--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
         "webpack": "^5.64.4"
     },
     "dependencies": {
+        "@bosquig/vue3-treeselect": "^0.1.2",
+        "@headlessui/vue": "^1.4.3",
         "css-loader": "^6.5.1",
         "laravel-echo": "^1.11.2",
         "moment": "^2.29.1",
@@ -39,6 +41,7 @@
         "postcss-nested": "^5.0.6",
         "pusher-js": "^7.0.3",
         "vue-click-outside": "^1.1.0",
+        "vue-multiselect": "^3.0.0-alpha.2",
         "vue-slider-component": "^4.0.0-beta.4",
         "vue-style-loader": "^4.1.3",
         "vue-tippy": "^6.0.0-alpha.37",
