--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=8fa33a8f293cf704392f",
-    "/css/app.css": "/css/app.css?id=30a5d42cc47707fbb594"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css"
 }
