--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=a580f0652e16e8e3547f",
+    "/css/app.css": "/css/app.css?id=9d95ccb0420be9e1fc06"
 }
