--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
         "vue-style-loader": "^4.1.3",
         "vue-tippy": "^6.0.0-alpha.37",
         "vue-toast-notification": "2.0",
+        "vue3-perfect-scrollbar": "^1.6.0",
         "vue3-popper": "^1.3.0",
         "vue3-treeselect": "^0.1.10",
         "vuex": "^4.0.2"
