--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.2.0",
         "inertiajs/inertia-laravel": "^0.5.4",
-        "laravel/framework": "^9.0",
+        "laravel/framework": "^8.54",
         "laravel/jetstream": "^2.4",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
@@ -20,7 +20,7 @@
         "yoomoney/yookassa-sdk-php": "^2.1"
     },
     "require-dev": {
-        "spatie/laravel-ignition": "^1.0",
+        "facade/ignition": "^5.10",
         "fakerphp/faker": "^1.9.1",
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.4",
