--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.2.0",
         "inertiajs/inertia-laravel": "^0.5.4",
-        "laravel/framework": "^8.54",
+        "laravel/framework": "^9.0",
         "laravel/jetstream": "^2.4",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
@@ -20,11 +20,11 @@
         "yoomoney/yookassa-sdk-php": "^2.1"
     },
     "require-dev": {
-        "facade/ignition": "^5.10",
+        "spatie/laravel-ignition": "^1.0",
         "fakerphp/faker": "^1.9.1",
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.4",
-        "nunomaduro/collision": "^5.10",
+        "nunomaduro/collision": "^6.1",
         "phpunit/phpunit": "^9.5.8"
     },
     "autoload": {
@@ -65,5 +65,6 @@
         "sort-packages": true
     },
     "minimum-stability": "dev",
-    "prefer-stable": true
+    "prefer-stable": true,
+    "platform-check": false
 }
