--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=02e0a353b31db754985b484b93042219",
-    "/css/app.css": "/css/app.css?id=a6e55ed642addd698c64c5674ce6b655"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css"
 }
