--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,6 @@
     "keywords": ["framework", "laravel"],
     "license": "MIT",
     "require": {
-        
         "beyondcode/laravel-websockets": "^1.12",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.2.0",
@@ -16,6 +15,7 @@
         "laravel/tinker": "^2.5",
         "pusher/pusher-php-server": "~5.0",
         "spatie/laravel-permission": "^5.5",
+        "spatie/laravel-query-builder": "^5.0",
         "tightenco/ziggy": "^1.0",
         "yoomoney/yookassa-sdk-php": "^2.1"
     },
