Добавление нового предприятия

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=58907cac5f836582fadb9f55994cc87b",
-    "/css/app.css": "/css/app.css?id=6a2a9aa7b4b8028670bbd0da0478b147"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css"
 }
