Исправление route при поиске реестра

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=fcce23e45f0cdac8d58eae4aa35c6a97",
+    "/css/app.css": "/css/app.css?id=ec13d678d25cf4d8aba93aaf6f34c019"
 }
