--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=b3e0f428f0e2fec551193b94840abff7",
-    "/css/app.css": "/css/app.css?id=a7990f03952a4c1b418925910b623b51"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css"
 }
