--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=238e530dc8309bd73e99d6f873ebf2db",
+    "/css/app.css": "/css/app.css?id=14600eca39878e1d56238243f65861e6"
 }
