--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "@headlessui/vue": "^1.4.3",
         "css-loader": "^6.5.1",
         "laravel-echo": "^1.11.2",
+        "laravel-vue-i18n": "^1.4.2",
         "moment": "^2.29.1",
         "postcss-apply": "^0.12.0",
         "postcss-nested": "^5.0.6",
