Иконки, предприятие добавление и редактирование

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=39ea8853ae2630803b4dd6682efae36c",
-    "/css/app.css": "/css/app.css?id=5805a53264c1409cb265f7cae837f0c0"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css"
 }
