--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=04bec3cb0af6bbfbda8185dbeaa4cc6c",
+    "/css/app.css": "/css/app.css?id=226b640157390ee4f2a79b8f0a9f7cf8"
 }
