добавлены уведомления с вебсокетами

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=37d45106aa81c52f2206c171bcc2b2ad",
-    "/css/app.css": "/css/app.css?id=e1c3b4a570c9e387c7016ec3a407a501"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css"
 }
