--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "keywords": ["framework", "laravel"],
     "license": "MIT",
     "require": {
-        "beyondcode/laravel-websockets": "^1.12",
+        "beyondcode/laravel-websockets": "^1.13.1",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.2.0",
         "inertiajs/inertia-laravel": "^0.5.4",
@@ -20,12 +20,13 @@
         "yoomoney/yookassa-sdk-php": "^2.1"
     },
     "require-dev": {
-        "spatie/laravel-ignition": "^1.0",
+        "barryvdh/laravel-debugbar": "^3.6",
         "fakerphp/faker": "^1.9.1",
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^6.1",
-        "phpunit/phpunit": "^9.5.8"
+        "phpunit/phpunit": "^9.5.8",
+        "spatie/laravel-ignition": "^1.0"
     },
     "autoload": {
         "psr-4": {
