--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=cc37ce1a402893279cb64bab83c6bfdd",
+    "/css/app.css": "/css/app.css?id=9efe55a591b5b2547d4c69630d5e52a2"
 }
