--- a/.env.example
+++ b/.env.example
@@ -14,7 +14,7 @@ DB_DATABASE=laravel
 DB_USERNAME=root
 DB_PASSWORD=
 
-BROADCAST_DRIVER=log
+BROADCAST_DRIVER=pusher
 CACHE_DRIVER=file
 FILESYSTEM_DRIVER=local
 QUEUE_CONNECTION=sync
@@ -54,3 +54,7 @@ LARAVEL_WEBSOCKETS_PERFORM_DNS_LOOKUP=true
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+MIX_WEBSOCKET_PORT=3001
+
+LARAVEL_WEBSOCKETS_SSL_LOCAL_CERT=null
+LARAVEL_WEBSOCKETS_SSL_LOCAL_PK=NULL
