--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=0c39c2331f4449d11e7b9811d24a2b64",
+    "/css/app.css": "/css/app.css?id=9efe55a591b5b2547d4c69630d5e52a2"
 }
