Можно выбирать отделу поля для предприятий

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=1ab40deeec3bac495a21d543f811c77f",
-    "/css/app.css": "/css/app.css?id=9efe55a591b5b2547d4c69630d5e52a2"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css"
 }
