Диапазон при ср ЗП Фиксация шапки и сокращение текста

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=9c1e693542dfd0c48f75a4ab139b2b29",
-    "/css/app.css": "/css/app.css?id=d4a9b56f8356c34e3f456e7b73dafa93"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css"
 }
