--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=17166b6e4b9f315ef188587e0e8be01a",
+    "/css/app.css": "/css/app.css?id=4a65c2f35956c175e2a1aa9272184e2a"
 }
