Статистика, права доступа, название прав, сводная таблица, новое меню

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=b7388cca2f986ee9460c84666603dd03",
-    "/css/app.css": "/css/app.css?id=4f46931e79977d12ccb45c2d86cf508d"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css"
 }
