--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,8 @@
         "laravel/jetstream": "^2.4",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
+        "maatwebsite/excel": "^3.1",
+        "psr/simple-cache": "^1.0",
         "pusher/pusher-php-server": "~5.0",
         "spatie/laravel-permission": "^5.5",
         "spatie/laravel-query-builder": "^5.0",
