--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "dependencies": {
         "@bosquig/vue3-treeselect": "^0.1.2",
         "@headlessui/vue": "^1.4.3",
+        "@j-t-mcc/vue3-chartjs": "^1.3.0",
+        "chart.js": "^3.7.1",
         "css-loader": "^6.5.1",
         "laravel-echo": "^1.11.2",
         "laravel-vue-i18n": "^1.4.2",
