--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=a9911a6faf08be1a6271414327f53c68",
+    "/css/app.css": "/css/app.css?id=9d9c17d975e1f4817e6e9b8dff8dcd39"
 }
