--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=8bbe8d393ab99bf38cf8a70b63258b71",
-    "/css/app.css": "/css/app.css?id=a73371fdfb9519b625052646052a2115"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css"
 }
