Загрузка массовой статистики

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=69634ba5d1b6bf476a1ad3c07b471714",
-    "/css/app.css": "/css/app.css?id=790253c21769ce1596d73ac9dd95a4cc"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css"
 }
