--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=bff2de90f540ed4e60639d3c589289fd",
+    "/css/app.css": "/css/app.css?id=82f2604657706e538d1528a0c600fb58"
 }
