мктрика и удаление файла у статы

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=39dbf04ef27f398da3b0306faf1b47da",
-    "/css/app.css": "/css/app.css?id=f5d464883d8ec9b26d5f2de7884419e5"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css"
 }
