--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=efb11fdab58b13e7266d3ba4c433c7b9",
+    "/css/app.css": "/css/app.css?id=f5d464883d8ec9b26d5f2de7884419e5"
 }
