--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=ef9b574e7d6b67aad077d6c56f9bf556",
-    "/css/app.css": "/css/app.css?id=2e36ecbb9a3d3cb8d1d2289a5f00568e"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css"
 }
