--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=9099b5265bd9cdd2b630d7f347e21d15",
+    "/css/app.css": "/css/app.css?id=1d9fb65342ad3cc7e26098a461074aca"
 }
