--- a/package.json
+++ b/package.json
@@ -50,10 +50,12 @@
         "vue-slider-component": "^4.0.0-beta.4",
         "vue-style-loader": "^4.1.3",
         "vue-tippy": "^6.0.0-alpha.37",
-        "vue-toast-notification": "2.0",
         "vue3-perfect-scrollbar": "^1.6.0",
         "vue3-popper": "^1.3.0",
         "vue3-treeselect": "^0.1.10",
         "vuex": "^4.0.2"
+    },
+    "browser": {
+        "crypto": false
     }
 }
