Исправил закрытие на крестик

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=03e3a64910a4b75241dc2efd010b87c1",
-    "/css/app.css": "/css/app.css?id=9116bb761a23fbcc76531984b19c97f7"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css"
 }
