--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=dfad7ff01ca9848c85eec7adae87fe76",
+    "/css/app.css": "/css/app.css?id=9116bb761a23fbcc76531984b19c97f7"
 }
