--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=4e31e78bc88bc68bd2104542f3f9031d",
-    "/css/app.css": "/css/app.css?id=3126645e10fad5c345944782fe6d03f2"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css"
 }
