--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=f0dceb422fcd67ae2d864cb1bf89aefa",
+    "/css/app.css": "/css/app.css?id=10c6fd573d4cb5dd962e5f5cbab060fa"
 }
