Мелкие испраления в графике

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=36cfa7e88d80592652cef9e0381fb066",
-    "/css/app.css": "/css/app.css?id=19743987494e857dc3dfc2546ef438be"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css"
 }
