--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=23a0a969bac3cdbdf3af4ec0b0e5e164",
+    "/css/app.css": "/css/app.css?id=55c3a60dd7f29ac3bc4470f1721b88f2"
 }
